// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StoreAddressMailingAddress /> should not render if no address is passed in 1`] = `""`;

exports[`<StoreAddressMailingAddress /> should render as expected 1`] = `
<Connect(Link)
  className={
    Object {
      "data-css-1f7wp8g": "",
    }
  }
  href="https://www.google.com/maps/dir/?api=1&destination=Test%20Street%20123%2C%20Testcity%2012345"
  openExtern={true}
>
  <div
    className={
      Object {
        "data-css-1rqdg8e": "",
      }
    }
  >
    <Location />
  </div>
  <div>
    <div
      data-test-id="street"
    >
      Test Street 123
    </div>
    locations.address
  </div>
</Connect(Link)>
`;

exports[`<StoreAddressMailingAddress /> should render more streets if necessary 1`] = `
<Connect(Link)
  className={
    Object {
      "data-css-1f7wp8g": "",
    }
  }
  href="https://www.google.com/maps/dir/?api=1&destination=Test%20Street%20123%2C%20Testcity%2012345"
  openExtern={true}
>
  <div
    className={
      Object {
        "data-css-1rqdg8e": "",
      }
    }
  >
    <Location />
  </div>
  <div>
    <div
      data-test-id="street"
    >
      Test Street 123
    </div>
    <div
      data-test-id="street2"
    >
      Some additional street info
    </div>
    locations.address
  </div>
</Connect(Link)>
`;
